Added Gelbooru support. --start and --end options added.

--- a/Picrawler.ini.sample
+++ b/Picrawler.ini.sample
@@ -4,36 +4,6 @@ encoding=CP932
 ;relative to pcrawl path.
 cookie=Picrawler.yaml
 
-[Pixiv]
-user=
-pass=
-savedir=
-sleep=3
-
-[PiXA]
-user=
-pass=
-savedir=
-sleep=2
-
-[NicoSeiga]
-user=
-pass=
-savedir=
-sleep=3
-
-[Fg]
-user=
-pass=
-savedir=
-sleep=3
-
-[Tinami]
-user=
-pass=
-savedir=
-sleep=3
-
 [Danbooru]
 user=
 pass=
@@ -45,3 +15,39 @@ user=
 pass=
 savedir=
 sleep=2
+
+[Fg]
+user=
+pass=
+savedir=
+sleep=3
+
+[Gelbooru]
+user=
+pass=
+savedir=
+sleep=2
+
+[NicoSeiga]
+user=
+pass=
+savedir=
+sleep=3
+
+[PiXA]
+user=
+pass=
+savedir=
+sleep=2
+
+[Pixiv]
+user=
+pass=
+savedir=
+sleep=3
+
+[Tinami]
+user=
+pass=
+savedir=
+sleep=3
