--- a/Picrawler.ini.sample
+++ b/Picrawler.ini.sample
@@ -22,6 +22,12 @@ pass=
 savedir=
 sleep=3
 
+[FgOld]
+user=
+pass=
+savedir=
+sleep=3
+
 ;Flickr doesn't need registration
 [Flickr]
 savedir=
@@ -60,6 +66,13 @@ sleep=2
 [Pixiv]
 user=
 pass=
+savedir=
+sleep=3
+
+;modifying user and pass is useless.
+[Pixiv2]
+user=null
+pass=null
 savedir=
 sleep=3
 
